# Healthcare-Patient-Voice-Bot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
docs/: code_walkthrough.md  implementation_plan.md
src/: bot.py  recorder.py  scenarios.py  server.py
tasks/: lessons.md  todo.md
